<resources>
    <string name="app_name">PickUp Lines</string>
    <string name="background">background</string>
    <string name="brush">Brush</string>
    <string name="quotes_start">Quotes start</string>
    <string name="quotes_end">Quotes End</string>
    <string name="like">Like</string>
    <string name="heart">heart</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="emojiicon">emojiIcon</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="favorite">Favorite</string>
    <string name="pickup_line_of_the_day">Pickup Line of the Day</string>
    <string name="pickup_line_maker">Pickup Line Maker</string>
    <string name="setting">Setting</string>
    <string name="customer_support">Customer Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_condition">terms and Condition</string>
    <string name="rate_5_star">Rate 5 Star</string>
    <string name="share_app">Share App</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="favorites">Favorites</string>
    <string name="version">version</string>
    <string name="version_label">Version Label</string>
    <string name="back">back</string>
    <string-array name="bad">
        <item>"Do you have a name? Or can I call you mine?"</item>
        <item>"If you and I were socks, we'd make a great pair!"</item>
        <item>"Are you a time traveler? Because I see you in my future!"</item>
        <item>"I'm no mathematician, but I'm pretty good with numbers. Tell you what, give me yours and watch what I can do with it."</item>
        <item>"If you were a vegetable, you would be a cute-cumber!"</item>
        <item>"I'm glad I remembered to bring my library card. 'Cause I am totally checking you out!"</item>
        <item>"You must be made of cheese. Because you're looking Gouda tonight!"</item>
        <item>"Well, here I am. What are your other two wishes for the genie?"</item>
        <item>"Remember me? Oh, that's right, I've only met you in my dreams."</item>
        <item>"My buddies bet me that I wouldn't be able to start a conversation with the most beautiful person in the club. What should we do with their money?"</item>
        <item>"You must be a campfire. Because you're super hot and I want s'more."</item>
        <item>"Are you from Tennessee? Because you're the only Ten I See."</item>
        <item>"There must be something wrong with my eyes. I can't take them off you."</item>
        <item>"Have you been covered in bees recently? I just assumed, because you look sweeter than honey."</item>
        <item>"If nothing lasts forever, will you be my nothing?"</item>
        <item>"If you were a phaser on Star Trek, you'd be set to stun!"</item>
    </string-array>
</resources>