<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sp"
        app:cardCornerRadius="10sp"
        android:layout_margin="10sp"
        android:backgroundTint="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvBrush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="35sp"
                    android:layout_height="35sp"
                    android:padding="5sp"
                    android:src="@drawable/paint_brush"
                    android:contentDescription="@string/brush" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvBrush">

                <ImageView
                    android:layout_width="35sp"
                    android:layout_height="35sp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/quotes_start"
                    android:rotation="180"
                    android:src="@drawable/quotes"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35sp"
                    android:layout_marginEnd="35sp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="35sp"
                    android:layout_height="35sp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/quotes_end"
                    android:src="@drawable/quotes"
                    app:tint="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:padding="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:src="@drawable/heart"
                        android:contentDescription="@string/heart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/like"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:layout_marginStart="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:src="@drawable/save"
                        android:contentDescription="@string/heart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:layout_marginStart="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:src="@drawable/copy"
                        android:contentDescription="@string/heart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/copy"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:layout_marginStart="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:src="@drawable/share"
                        android:contentDescription="@string/heart" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:layout_marginStart="10sp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>